margin and text align corrections

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -6,6 +6,7 @@ button, .button, a[role=button] {
   display: block;
   @include typography.body-text();
   padding: calc(0.75rem - 1px) calc(1rem - 1px);
+  margin: var(--spacer-line-break) 0 var(--spacer-full) 0;
 	border: solid 1px transparent;
   border-radius: 2px;
 
@@ -20,6 +21,8 @@ button, .button, a[role=button] {
     inset 0 0 0 0 var(--color-shadow, f0f);
 
   text-decoration: none;
+  text-align: center;
+
   color: var(--text-color-body-text, #f0f);
   &:link, &:active, &:visited {
     text-decoration: none;
@@ -50,7 +53,7 @@ button, .button, a[role=button] {
     background-color: var(--color-page, #f0f);
     border: none;
     padding: 0.25rem 0.5rem;
-    margin-top: -0.25rem;
+    margin: 0.75rem 0 0 0;
 
     &.current {
       background-color: var(--color-visual-grouping, #f0f);
